Fixed ripple overflow.

--- a/src/styles/components/ripple.scss
+++ b/src/styles/components/ripple.scss
@@ -1,5 +1,6 @@
 .ripple-element {
   cursor: pointer;
+  -webkit-mask-image: -webkit-radial-gradient($color-black, $color-white);
   overflow: hidden;
   position: relative;
 
